made external dependencies like controllers as injected

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Blocker</string>
+    <string name="enter_a_number_to_block">Enter a number to block</string>
 </resources>
